--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "events": "^3.3.0",
     "gsap": "^3.11.5",
     "lil-gui": "^0.18.1",
+    "tailwindcss": "^3.3.2",
     "three": "^0.152.2",
     "vite": "^4.3.9"
   }
